# fraud-detection-system

./: .gitignore  README.md  docker-compose.yml  run_tests.sh
config/logstash/: fraud-detection.conf  transaction-service.conf
docs/: operations-guide.md  risk_score_calculation.md
docs/implementation-plans/: customer-notification-service.md  dashboard-analytics-service.md  fraud-detection-service.md  security-alert-service.md  transaction-service.md
services/fraud-detection/: Dockerfile  README.md  conftest.py  pytest.ini  requirements-dev.txt  requirements.txt
services/fraud-detection/docs/: implementation_plan.md
services/fraud-detection/src/: __init__.py  api.py  main.py  metrics.py
services/fraud-detection/src/config/: settings.py
services/fraud-detection/src/core/: __init__.py  alert_service.py  alerts.py  models.py
services/fraud-detection/src/detection/: __init__.py  engine.py
services/fraud-detection/src/kafka/: __init__.py  concurrent_processor.py  config.py  consumer.py  transaction_consumer.py
services/fraud-detection/src/tests/: test_api.py  test_metrics.py
services/fraud-detection/tests/: conftest.py
services/logstash/: Dockerfile
services/notification-service/: package.json
services/realtime-processor/: Cargo.toml
services/security-alert/: build.gradle.kts
services/transaction-service/: Dockerfile  Makefile  README.md  go.mod  go.sum
services/transaction-service/cmd/: main.go
services/transaction-service/docs/: implementation-plan.md
services/transaction-service/scripts/: generate_test_transactions.py
(+48 files in other folders)
