[package]
name = "realtime-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
actix-web = "4.4.0"
mongodb = "2.7.0"
env_logger = "0.10.0"
log = "0.4.20"
dotenv = "0.15.0" 